crates/keron-lang/tests/corpus/errors/check/fn_missing_required_arg.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: missing required argument `b` for `add`
  --> 5:14
  |
5 | val x: Int = add(1)
  |              ^^^^^^^
